[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "livekit-plugins-hush"
version = "0.1.0"
description = "Hush noise suppression plugin for LiveKit Agents — self-hosted, in-process, no cloud API"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["livekit", "noise-suppression", "noise-cancellation", "hush", "speech", "audio", "voip"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "livekit>=1.0.25",
    "livekit-agents>=1.4.4",
    "numpy>=1.26.0",
    "onnxruntime>=1.17.0",
    "deepfilterlib>=0.5.4",
]

[project.urls]
Homepage = "https://github.com/anomalyco/livekit-plugins-hush"
Repository = "https://github.com/anomalyco/livekit-plugins-hush"
"Bug Tracker" = "https://github.com/anomalyco/livekit-plugins-hush/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"livekit.plugins.hush" = ["models/*.onnx", "models/*.onnx.data"]
